associating with not to

--- a/paper/incl_conclusion.tex
+++ b/paper/incl_conclusion.tex
@@ -45,6 +45,8 @@ In either case, our computations show that, unless second order analysis is perf
 
 Future work will include a more detailed exploration of evolutionary algorithms and their implementation for stability analysis of fracture in thin films. Some notable instances are craquelures in artistic paintings~\cite{fuster-lopez:2020-picassos, Bosco:2020aa,Bosco:2021},  brittle stability of the cryosphere~\cite{weiss:2017-linking, tollefson:2017-giant, Sun:2023aa, Millan:2023aa} and crack-pattern selection in metallic thin films~\cite{Faurie2019-to}. {As understood in this work, the final crack patterns depend heavily on the form of the selected unstable modes. In turn, the irreversibility constraint, primarily implemented to prevent crack closure, directly impacts the stability of solutions and mode selection at transition loads. Therefore, our findings suggest that the success of the phase-field model in predicting crack patterns in thin films relies on the use of robust numerical algorithms.}
 
+
+\paragraph{Acknowledgements} This work was in part supported by the French National Research Agency (ANR, Project No. ANR-20-CE91–0010) and the Austrian Science Fund (FWF, Project No. I 4913-N) within the framework of the project: Nanoarchitected films for unbreakable flexible electronics (NanoFilm).
 % PERFORMING AN THOROUGH characterisation of bifurcation points, conditions for stability exchange, local features of the energy landscape, qualitative features of constrained systems with respect to canonical representations of bifurcations, thorough TECHNIQUES OF energy blow up and reduction at bifurcation points.
 
 
