--- a/paper/incl_intro.tex
+++ b/paper/incl_intro.tex
@@ -97,7 +97,7 @@ Bifurcation and stability of equilibrium configurations in dynamic systems witho
 For systems of ODEs the criterion  of bifurcation (from a fundamental solution) amounts to the study of the existence of solutions different than the fundamental one in an arbitrary neighborhood of the control parameters. Conditions of failure of the implicit function theorem~\cite{Iooss2012-el} describe the scenario under which a system of equations can realise more than one smooth solution.
 Less clear is the picture in presence of nonconvexities and nonlinear constraints associated with internal variables, where quasi-static evolutionary problems defined by optimality conditions take the form of variational inequalities defining the trajectories of a system in phase space. In these scenarios, as noted in the seminal work~\cite{Hill1958-xd}, the study of bifurcation and stability is not equivalent to the existence of solutions infinitesimally near critical points in arbitrary neighborhoods of the control parameters~\cite{Bazant2010-zb}.
 
-In our context, a bifurcation condition along the system's evolution parametrized by the control parameter(s) is associated to the uniqueness of a field of vectors tangent to the trajectory in phase space.
+In our context, a bifurcation condition along the system's evolution parametrized by the control parameter(s) is associated with  the uniqueness of a field of vectors tangent to the trajectory in phase space.
 % Namely, the critical point is degenerate in that its second derivative is not invertible.
 % (local) failure of the implicit function theorem.
 % For an evolution, 
@@ -112,7 +112,7 @@ The absence of analytical solutions in strongly non-linear settings requires res
 % Notably, in the phase-field theory of fracture, the initiation of a crack is preceded by a localization of the damage field, .
 
 The fracture phenomenon of thin films bonded to substrates unveils a myriad of complex crack patterns, as evidenced by numerical studies \cite{Baldelli2014-ho,Alessi2019-bx,Hu2020-nt,Salman2021-mn,Baldelli2021-gc}, resembling those observed in natural contexts such as sand or dried mud \cite{Goehring2010-xz}, and even in biological structures like animal skin \cite{Qin2014-wz} and bark~\cite{chattaway:1955, shen:2020}. These observations hold particular relevance in the domain of stretchable and flexible electronics \cite{Faurie2019-to,Godard2022-ss} including  self-healing metal thin films on a flexible substrates \cite{Trost2024-ca}. 
-Within this study, centered on the numerical computation of evolutionary solutions for phase-field fracture models, we consider two one-dimensional phase-field fracture models of a brittle membrane on two types of substrates: one stiff, one compliant. The first model describes a brittle thin film deposited on a stiff (rigid) substrate, while the second model involves a compliant yet unbreakable substrate that can undergo non-uniform deformations. The finite stiffness of the substrate in the second scenario leads to nontrivial qualitative differences in terms of uniqueness of the evolution path, associated to the loss of stability of the unfractured solution~\cite{Baldelli2014-ho,Kuhn2015-rt,Baldelli2021-gc,Harandi2023-cd}.
+Within this study, centered on the numerical computation of evolutionary solutions for phase-field fracture models, we consider two one-dimensional phase-field fracture models of a brittle membrane on two types of substrates: one stiff, one compliant. The first model describes a brittle thin film deposited on a stiff (rigid) substrate, while the second model involves a compliant yet unbreakable substrate that can undergo non-uniform deformations. The finite stiffness of the substrate in the second scenario leads to nontrivial qualitative differences in terms of uniqueness of the evolution path, associated with  the loss of stability of the unfractured solution~\cite{Baldelli2014-ho,Kuhn2015-rt,Baldelli2021-gc,Harandi2023-cd}.
 
 
 Despite the one-dimensional setting we adopt here which allows for analytical predictions, these models reveal a complex landscape of equilibrium states with multiple local minima.
