--- a/paper/incl_numerics.tex
+++ b/paper/incl_numerics.tex
@@ -95,13 +95,13 @@ $\bar\epsilon^c_1$, identified using linear stability analysis, see Figure~\ref{
 
 When the loading parameter $\bar{\epsilon}_t$ is further increased, the equilibrium configuration with $n=3$ loses linear stability at point $A'$. In Fig. \ref{fig:branches-stiff} we represent state transitions according to the LEM protocol by arrows. It can be observed that under this protocol, the only available transition from point $A'$ is to the branch with $n=4$, which is locally stable within at the corresponding applied strain $\bar{\epsilon}_2$. The minimum energy configuration on the branch with $n=4$ is depicted in Fig.~\ref{fig:branches-stiff}-right at point $B$, consisting of two cracks: one inside the domain and two on the right and left boundaries.
 
-Further increasing the load, the stability of the branch with $n=4$ is lost at point $B'$, a single available transition leads the system to the branch with $n=5$. While the branch with $n=6$ appears accessible due to its lower energy compared to the current state, it is unstable at the current value of $\bar\epsilon_3$. The lowest energy configurations on the branches with $n=5$ and $n=6$ are illustrated in Fig.~\ref{fig:branches-stiff}-(right). Increasing the load along the branch with $n=5$ which loses linear stability at point $C'$, a branch switching event occurs towards the branch with $n=7$, the corresponding minimum energy configuration on this branch is depicted in Fig.~\ref{fig:branches-stiff}(b). Finally, this branch reconnects to the homogeneous branch with $n=0$ at point $F$. Remark that, in the case of a stiff substrate, the LEM protocol identifies a unique evolution path, with the system having a single bifurcation option, or available branch, at each instability point.
+Further increasing the load, the stability of the branch with $n=4$ is lost at point $B'$, a single available transition leads the system to the branch with $n=5$. While the branch with $n=6$ appears accessible due to its lower energy compared to the current state, it is unstable at the current value of $\bar\epsilon_3$. The lowest energy configurations on the branches with $n=5$ and $n=6$ are illustrated in Fig.~\ref{fig:branches-stiff}(right). Increasing the load along the branch with $n=5$ which loses linear stability at point $C'$, a branch switching event occurs towards the branch with $n=7$, the corresponding minimum energy configuration on this branch is depicted in Fig.~\ref{fig:branches-stiff}(right). Finally, this branch reconnects to the homogeneous branch with $n=0$ at point $F$. Remark that, in the case of a stiff substrate, the LEM protocol identifies a unique evolution path, with the system having a single bifurcation option, or available branch, at each instability point.
 
 For the compliant substrate model, the equilibrium branches that solve the nonlinear equations (Eq.~\ref{auto2}) are shown in Fig.~\ref{fig:branches-compliant}. 
 We again plot the energy difference $\Delta \widetilde\Psi$ between the energy of the current solution and the energy of the homogeneous solution $\Estiffhom (\bar{\epsilon})$ at the current value of the loading parameter $\bar\epsilon$. 
 The stability of solutions is color coded (light blue indicates \emph{stable} states, orange identifies \emph{unstable} states), the stability marker being given by the numerical evaluation of the smallest eigenvalue of the stiffness matrix $\stiffmatcompl$, defined in \eqref{eq:stifness2}.
 
-According to the LEM protocol with a loading history starting in the unloaded and sound configuration, the initial transition from the trivial solution to the only available branch with $n=2$ occurs at $\bar \epsilon_1$, marked as point $H$. As illustrated in Fig. \ref{fig:branches-compliant}(b), the damage and strain profiles of the lowest energy configuration at point $A$ is characterised by two boundary cracks. As the loading increases, the system persists on the $n=2$ branch until point $A'$ which marks an instability. The system can now access two equilibrium branches: $n=3$ and $n=4$ shown in gray and black arrows. Fig. \ref{fig:branches-compliant}(b) shows the typical damage and strain profiles on these branches. Branches $n=3$ and $n=4$ feature one bulk crack plus one boundary crack, and one bulk crack plus two boundary cracks, respectively. 
+According to the LEM protocol with a loading history starting in the unloaded and sound configuration, the initial transition from the trivial solution to the only available branch with $n=2$ occurs at $\bar \epsilon_1$, marked as point $H$. As illustrated in Fig. \ref{fig:branches-compliant}(right), the damage and strain profiles of the lowest energy configuration at point $A$ is characterised by two boundary cracks. As the loading increases, the system persists on the $n=2$ branch until point $A'$ which marks an instability. The system can now access two equilibrium branches: $n=3$ and $n=4$ shown in gray and black arrows. Fig. \ref{fig:branches-compliant}(right) shows the typical damage and strain profiles on these branches. Branches $n=3$ and $n=4$ feature one bulk crack plus one boundary crack, and one bulk crack plus two boundary cracks, respectively. 
 
 The choice of the subsequent branch transition at point $A'$ will dictate the ensuing crack growth. On branches with $n=3$ and $n=4$, at the instability points $B'$ and $C'$, the system will once again encounter two available equilibrium branches. From $n=3$ branch  at point $B'$, the system can transition to either the $n=4$ or $n=5$ branch. Opting for the $n=4$ branch, the subsequent branch selection occurs at point $C'$, offering branches with $n=6$ or $n=5$. Notably, the $n=5$ branch smoothly reconnects with the trivial solution at point $F$. However, the $n=6$ branch experiences another instability at point $D'$ before rejoining the trivial solution. 
 
@@ -164,7 +164,7 @@ Among quasi-Newton schemes, the L-BFGS method is widely regarded as one of the m
     \includegraphics[width=.6\textwidth]{../images/model_compliant_energy_kick.pdf}
     \includegraphics[width=.4\textwidth]{../images/model_compliant_profiles.pdf}
     \caption{
-        Compliant substrate. Quasi-static loading simulations with L-BFGS: (a) the energy difference $\Delta E$, between the quasi-Newton solutions and the homogeneous solutions are superimposed onto equilibrium branches (light blue: stable; orange: unstable). Bottom, the smallest eigenvalue $\lambda_t$ of the second variation $\Ecompl''$ as a function of the loading parameter $\bar\epsilon$. In red, indicated the unstable region $\lambda_t<0$ for the equilibrium solution; Right, damage profiles referring to the transition endstates.}
+        Compliant substrate. Quasi-static loading simulations with L-BFGS: (a) the energy difference $\Delta \Ecompl$, between the quasi-Newton solutions and the homogeneous solutions are superimposed onto equilibrium branches (light blue: stable; orange: unstable). Bottom, the smallest eigenvalue $\lambda_t$ of the second variation $\Ecompl''$ as a function of the loading parameter $\bar\epsilon$. In red, indicated the unstable region $\lambda_t<0$ for the equilibrium solution; Right, damage profiles referring to the transition endstates.}
     \label{fig:tempo2}
 \end{figure}
 
@@ -176,8 +176,8 @@ The following results were obtained using the Alglib library~\cite{Bochkanov2013
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics*[align=c,width=.45\textwidth]{../images/model_stiff_kick_profiles.png}
-    \includegraphics*[align=c,width=.45\textwidth]{../images/model_compliant_kick_profiles.png}
+    \includegraphics*[align=c,width=.45\textwidth]{../images/model_stiff_kick_profiles-1.pdf}
+    \includegraphics*[align=c,width=.45\textwidth]{../images/model_compliant_kick_profiles-1.pdf}
     \caption{
         Profiles of damage fields and perturbations showing the effect of the kick algorithm in state transitions (from unstable to stable). Branch switching events correspond to load values indicated by $\bar \epsilon_i$ with $i\in \mathbb N$ in {Fig.~\ref{fig:tempo1} and ~\ref{fig:tempo2}}. The stiff substrate model is in the left column, the compliant substrate model on the right and  the light (orange) line indicates the unstable damage field $\alpha^*$, the eigenvector associated with  the smallest eigenvalue, $p$, is displayed in green highlighting its positive and negative values. The dashed line represents the perturbed damage field  $\alpha^*+p$ used as initial guess for the state transition, the solid black line displays the solution $\alpha_t$ returned after first-order convergence.}
     \label{fig:kick}
@@ -186,15 +186,15 @@ The following results were obtained using the Alglib library~\cite{Bochkanov2013
 
 In Figure \ref{fig:tempo1}, we present the results of our numerical experiments, overlaying solutions obtained with the quasi-Newton algorithm onto the equilibrium map determined using the pseudo-arclength continuation method described in the previous section. Fig. \ref{fig:tempo1}-bottom shows the smallest eigenvalue $\lambda_t$ whose positivity informs on the stability of the solution. All the branch switching events are delayed in the sense they do not take place when the smallest eigenvalue of the second variation vanishes but only beyond the loads corresponding to the eigenvalue's sign transition. Notably, the expected first branch switching event—from the {homogeneous} solution to the branch with \(n=3\) as outlined in the LEM protocol—did not occur at point $H$ as anticipated. During a monotonic loading, the system remains on the trivial branch, as shown in Fig. \ref{fig:branches-stiff}(a), until it transitions to the branch with \(n=4\) at a value of the load much higher than the critical loading parameter \(\bar{\epsilon}_1\). By monitoring the smallest eigenvalue of the second energy variation at the solution, we observe that indeed the solutions computed via the quasi-Newton solver are unstable beyond \(\bar{\epsilon}_1\), which is consistent with the linear stability results for the trivial branch. A closer inspection of the solution field reveals that the quasi-Newton solutions are not homogeneous but instead exhibit a small perturbation akin to the instability mode calculated analytically (i.e., the eigenvector associated with the smallest eigenvalue). For instance, the  quasi-Newton solution before the first branch switching event is shown in inset (state $H$) in Fig. \ref{fig:tempo1}-right, where we see that the equilibrium damage shows a slight oscillation reminiscent of the eigenmode \(\alpha_n(x) \sim \cos(n\pi x)\), with \(n=3\). The state transition captured by the quasi-Newton method is the one towards the \(n=4\) branch, with one bulk crack and two boundary cracks, see inset ($A$) in Fig. \ref{fig:tempo1}-right. If the transition had taken place at \(\bar{\epsilon}_1\) as anticipated by our LEM strategy, the system would have reached a configuration with two bulk cracks and one boundary crack, as shown in Fig. \ref{fig:branches-stiff}-right (branch $n=5$).
 
-With continued loading, the damage increases and the system evolves along the \(n=4\) branch beyond the loading value at which stability is lost, as shown in Fig. \ref{fig:tempo1}-right. A dissipative branch switching event takes place from the current branch (\(n=4\)) at point \(B'\) to the branch with \(n=6\); see Fig. \ref{fig:tempo1}(b) and the inset $C$ for the corresponding damage profile. The delay in bifurcation results in a branch selection event different from the one in our LEM protocol. The delays at bifurcation for the first and second branch switching events leads to a completely different evolutionary path compared to the LEM protocol until it finally reconnects with the homogeneous branch at point \(C'\).
+With continued loading, the damage increases and the system evolves along the \(n=4\) branch beyond the loading value at which stability is lost, as shown in Fig. \ref{fig:tempo1}-right. A dissipative branch switching event takes place from the current branch (\(n=4\)) at point \(B'\) to the branch with \(n=6\); see Fig. \ref{fig:tempo1}(right) and the inset $C$ for the corresponding damage profile. The delay in bifurcation results in a branch selection event different from the one in our LEM protocol. The delays at bifurcation for the first and second branch switching events leads to a completely different evolutionary path compared to the LEM protocol until it finally reconnects with the homogeneous branch at point \(C'\).
 
 % After illustrating the numerical results for the stiff substrate model, we now transition to exploring the simulation results of with an compliant elastic background. 
-For the compliant substrate model, the solutions of our numerical experiments obtained from the quasi-Newton algorithm (black thick line) are overlaid in Fig. \ref{fig:tempo2}-(left) onto the equilibrium map, while their stability is depicted in Fig. \ref{fig:tempo2}-bottom. Notably, we observe a delay, albeit less pronounced compared to the stiff substrate model, for the bifurcation from the trivial branch which occurrs at a value  higher than the analytically determined critical load \(\bar{\epsilon}_1\). Interestingly, the quasi-Newton method switches to the branch with $n=2$, which exhibits lower energy compared to the branch with $n=3$. This occurs  despite the delay in bifurcation because the branch  $n=3$ remains accessible for the current value $\bar\epsilon$. It's worth noting that the LEM protocol also anticipated a first branch selection event leading to the branch with $n=2$ with two boundary cracks. 
+For the compliant substrate model, the solutions of our numerical experiments obtained from the quasi-Newton algorithm (black thick line) are overlaid in Fig. \ref{fig:tempo2}(left) onto the equilibrium map, while their stability is depicted in Fig. \ref{fig:tempo2}-bottom. Notably, we observe a delay, albeit less pronounced compared to the stiff substrate model, for the bifurcation from the trivial branch which occurrs at a value  higher than the analytically determined critical load \(\bar{\epsilon}_1\). Interestingly, the quasi-Newton method switches to the branch with $n=2$, which exhibits lower energy compared to the branch with $n=3$. This occurs  despite the delay in bifurcation because the branch  $n=3$ remains accessible for the current value $\bar\epsilon$. It's worth noting that the LEM protocol also anticipated a first branch selection event leading to the branch with $n=2$ with two boundary cracks. 
 We again observe that, even before the first branch-changing event, the quasi-Newton solution {deviates from the homogeneous branch, and the damage profile has} is perturbed by an oscillatory term of the form \(\cos(n\pi x)\), reminiscent of the eigenmode $\alpha_n$  with \(n=2\). 
 % \added[id=ALB]{Remark: this may be due to the quasi-Newton computation which necessarily relies on an approximate positive-definite Hessian. EXPAND}
 These perturbations of the equilibrium profiles are negligible from the global energetic standpoint, as it can be inferred in Figure~\ref{fig:tempo2}(a), by the superposition between the energy of the computed evolution and the exact total energy of the homogeneous solution, yet have a role in the selection of the next branch as will be evidenced in the following.
 
-The system moves along the branch with $n=2$  as the load increases, until the stability transition at load $\bar \epsilon_2$, indicated by point $A'$. Energy minimization brings the system to the branch $n=4$ although the branch with $n=3$ is also accessible and has lower energy. Figure~\ref{fig:tempo2}(c), displays the corresponding damage profiles before and after {the branch} switching events  at points $B'$ and $C$. The final {transition} before the reconnection to the homogeneous branch takes place at point $C'$, which is also an unstable configuration. The transition brings the system to the branch $n=6$ as seen in Fig.~\ref{fig:tempo2}(b), the corresponding stable damage profile at point D is shown in Fig. \ref{fig:tempo2}(c). 
+The system moves along the branch with $n=2$  as the load increases, until the stability transition at load $\bar \epsilon_2$, indicated by point $A'$. Energy minimization brings the system to the branch $n=4$ although the branch with $n=3$ is also accessible and has lower energy. Figure~\ref{fig:tempo2}(right), displays the corresponding damage profiles before and after {the branch} switching events  at points $B'$ and $C$. The final {transition} before the reconnection to the homogeneous branch takes place at point $C'$, which is also an unstable configuration. The transition brings the system to the branch $n=6$ as seen in Fig.~\ref{fig:tempo2}(right), the corresponding stable damage profile at point D is shown in Fig. \ref{fig:tempo2}(right). 
 
 In summary, while the results of the quasi-Newton minimization simulations exhibit overall similarities in both models, the trajectory taken by the system in the compliant model more closely adheres with the LEM protocol outlined above. This alignment can be attributed to the specific energy landscape of the compliant model. In case of indeterminacy of he trajectory, such as when multiple stable solutions exist at a loss of stability, how to identify an evolution direction?
 
@@ -224,8 +224,10 @@ $ where \(\eta\) is the step size.
 % \comment[id=ALB]{}
 % \comment[id=ALB]{Does $k$ refer to the quasi-Newton iteration number? I think it can be removed}
 This step size can be determined through a line-search algorithm by minimizing the one-dimensional energy slices along the energy descent mode given by the function 
-$$f(\eta) = \Psi(\femstate + \eta \femperturb)
-\label{eqn:energy-slice}$$
+\begin{equation}
+    f(\eta) = \Psi(\femstate + \eta \femperturb),
+\label{eqn:energy-slice}
+\end{equation}
  to find an optimal value \(\eta\), such that $\eta \in \arg \min_{\eta} f$. {We then run the quasi-Newton step to obtain a new critical point $\femnewstate$.}
 
 The outcome of this hybrid algorithm is the three anticipated branch-switching events identified for the first model previously reported in Fig. \ref{fig:branches-stiff}. For each of these three cases, the snapshots of the damage fields, the associated {instabilty mode} \(\mathbf{p}\), the perturbed states \(\mathbf{\tilde X}^{(0)}\), and the converged solutions $\femnewstate$ are shown in Fig.~\ref{fig:kick} in the right column.
@@ -246,15 +248,13 @@ Despite the quasi-Newton algorithm was able to reproduce one of the possible pat
 
 
 The system's response under the hybrid algorithm is depicted in Fig. \ref{fig:kick}(d-g). The first column displays the perturbed damage profiles, while the second column shows the outcomes of the energy minimization process starting from  this perturbed state. A stable state with two nucleated boundary cracks (branch \( n=2 \)) is achieved following the destabilization of the trivial branch, as illustrated in Fig. \ref{fig:kick}(d). Subsequently, an interior crack nucleates in the middle of the system (branch \( n=4 \)), as shown in Fig. \ref{fig:kick}(e). The third event involves a transition from branch \( n=3 \) to branch \( n=5 \). The  event depicted in Fig. \ref{fig:kick}(f) is the transition to branch \( n=6 \). The last event before reconnecting to the trivial branch is the transition from branch \( n=6 \) to branch \( n=7 \), the only  branch available to the system at this load, see in Fig. \ref{fig:kick}(f). To summarize, the branches selected by the hybrid algorithm follow the sequence 
-\( 0 \rightarrow 2 \rightarrow 3 \rightarrow 5 \rightarrow 6 \rightarrow 7 \rightarrow 0 \), 
+\( 0 \rightarrow 2 \rightarrow 3 \rightarrow 5 \rightarrow 6 \rightarrow 0 \), 
 which differs from the sequence 
-\( 0 \rightarrow 2 \rightarrow 3 \rightarrow 4 \rightarrow 6 \rightarrow 7 \rightarrow 0 \) 
+\( 0 \rightarrow 2 \rightarrow 3 \rightarrow 6 \rightarrow 0 \) 
 followed by the quasi-Newton algorithm.
 
-\comment[id=ALB]{double-check}
 Our numerical findings suggest that equilibria close to the Hessian degeneracy (i.e. with small but positive eigenvalues) are robust in the sense that they are insensitive to perturbations. This is highlighed by the fact that running the quasi-Newton solver on a perturbed state close to the Hessian sign transition yields, after convergence, the same equilibrium state prior to perturbation.
-On the other hand, when the smallest eigenvalue of the system's Hessian is small and negative, the
- the step size \( \eta \) obtained by minimization of \eqref{eqn:energy-slice} is sufficient for the quasi-Newton algorithm to effectively escape the flat region of the energy landscape. 
+On the other hand, when the smallest eigenvalue of the system's Hessian is small and negative, the step size \( \eta \) obtained by minimization of \eqref{eqn:energy-slice} is sufficient for the quasi-Newton algorithm to effectively escape the flat region of the energy landscape. 
 
 % The quasi-Newton solver starting from the perturbed state seeks a direction that will always be a descent direction. Therefore, a perturbed state obtained by taking a large step-size moves the system away from the flat region, allowing the quasi-Newton algorithm to find the next lower energy branch. It remains to be seen if this choice will work in other models or a more elaborated algorithm has to be implemented as suggested above, which will be the subject of future work.
 
@@ -264,14 +264,14 @@ On the other hand, when the smallest eigenvalue of the system's Hessian is small
     \includegraphics[width=.5\textwidth]{../images/model_stiff_energy_kick_algo.pdf} 
     \includegraphics[width=.5\textwidth]{../images/model_compliant_energy_kick_algo.pdf}
     \caption{
-        Quasi-static loading simulations with L-BFGS: the energy difference $\Delta \Estiff$ (left) and $\Ecompl$ (right), between the quasi-Newton solutions and the homogeneous solutions are superimposed onto equilibrium branches. The bottom plot shows the smallest eigenvalue of the second variation as a function of the loading parameter $\bar\epsilon$. The positivity of the smallest eigenvalue indicates that the solution (and the evolution as a whole) is stable.
+        Quasi-static loading simulations with L-BFGS: the energy difference $\Delta \Estiff$ (left) and $\Delta\Ecompl$ (right), between the quasi-Newton solutions and the homogeneous solutions are superimposed onto equilibrium branches. The bottom plot shows the smallest eigenvalue of the second variation as a function of the loading parameter $\bar\epsilon$. The positivity of the smallest eigenvalue indicates that the solution (and the evolution as a whole) is stable.
         }
     \label{fig:tempostable}
 \end{figure}
 
 
 \subsection{Irreversible evolutions and stability}
-To highlight the role of irreversibility constraints on the determination of the evolution and its consequences on the space of perturbations, we discuss the full stability problem Ineq.~\eqref{eq:variational_stability} in our simplified one-dimensional setting through an illustrative numerical computation. 
+To highlight the role of irreversibility constraints on the determination of the evolution and its consequences on the space of perturbations, we discuss the full stability problem inequality~\eqref{eq:variational_stability} in our simplified one-dimensional setting through an illustrative numerical computation. 
 
 To solve the second-order cone-constrained inequality~\eqref{eq:variational_stability}, we employ a numerical method based on the orthogonal decomposition of the Hilbert space  $X_0$  according to two mutually polar cones  $K^+_0$  and  $K^*$, cf. \cite{Moreau1962-fz}. Given an element  $z$  in  $X_0$ , it can be shown that there exists a unique decomposition into two orthogonal components,  $x \in K^+_0$  and  $y \in K^*$ , where  $x$  and  $y$  are the closest points in  $K^+_0$  and  $K^*$  to  $z$, respectively.
 
@@ -286,11 +286,11 @@ where $H$ is the Hessian operator. Then, we compute the residual vector $y^{(k)}
 $v^{(k)} =\operatorname{P_K} (x^{(k)} + \eta y^{(k)})$.
 The algorithm is repeated until convergence is achieved. Note that, in the cone-constrained case, the residual vector $y^{(k)}$ need not be zero at convergence.
 
-The irreversible evolution is computed using the same parameters as in the experiment in Figure~\ref{fig:hessian1}-(a) for the rigid substrate model. In Fig.~\ref{fig:irreversibility-profiles} we plot the profiles of the fields at the loading step corresponding with the bifurcation point of the reversible system, namely $H$ in Fig.~\ref{fig:branches-stiff}.
+The irreversible evolution is computed using the same parameters as in the experiment in Figure~\ref{fig:hessian1}(a) for the rigid substrate model. In Fig.~\ref{fig:irreversibility-profiles} we plot the profiles of the fields at the loading step corresponding with the bifurcation point of the reversible system, namely $H$ in Fig.~\ref{fig:branches-stiff}.
 
 
-The homogeneous damage field $\alpha_h$ and the profiles of the damage eigenfunctions associated with  the minimal eigenvalue for the second order bifurcation problem Ineq.~\eqref{eq:variational_bifurcation} (left panel) coincide with the damage solution and eigenmode ($n=3$) computed by Fourier series, {cf.~Fig~\ref{fig:kick}(a).}
-On the other hand, the eigenmode for the full nonlinear stability problem Ineq.~\eqref{eq:variational_stability} is plotted in the right panel.
+The homogeneous damage field $\alpha_h$ and the profiles of the damage eigenfunctions associated with  the minimal eigenvalue for the second order bifurcation problem inequality~\eqref{eq:variational_bifurcation} (left panel) coincide with the damage solution and eigenmode ($n=3$) computed by Fourier series, {cf.~Fig~\ref{fig:kick}(a).}
+On the other hand, the eigenmode for the full nonlinear stability problem inequality~\eqref{eq:variational_stability} is plotted in the right panel.
 Note that the profile of the (non-negative) instability modes do not reduce to a mere truncation (i.e. a projection on the cone $K^+_0$) of the bifurcation modes, and this is due - in general - to the necessary regularity of the solutions requiring continuity of first derivatives. 
 
 % The former is determined by the smallest eigenvalue of the operator $H(y)$, which is a non-linear operator that depends on the current damage state, whereas the latter is determined by the eigenvalue problem in the vector space.
@@ -300,7 +300,7 @@ Note that the bifurcation spectrum is singular at $\bar \epsilon_t=0$ following 
 Conversely, the set of admissible damage perturbations for the stability problem changes from the empty set for the loading interval $0 < \bar\epsilon_t\leq \bar\epsilon_b$ set to the solid cone of smooth positive functions $\{\beta\in H^1((0,1)):\beta \geq 0\}$ only beyond the bifurcation load for $\bar\epsilon_t \geq \bar\epsilon_b$.
 Despite the occurrence of negative eigenvalues for the bifurcation problem, the eigenvalues of the stability problem are all positive, which is a sufficient condition to ascertain the stability (and thus, the observability) of the computed evolution.
 
-The consequences of irreversibility manifest both as a pointwise constraint, ruling out transitions between branches that would require a local decrease of damage in favour of a global decrease of energy (e.g. between $n=3$ to $n=4$, see profiles in the Fig.~\ref{fig:kick} of the transition (b)$\mapsto$ (d)). 
+The consequences of irreversibility manifest both as a pointwise constraint, ruling out transitions between branches that would require a local decrease of damage in favour of a global decrease of energy (e.g. between $n=3$ to $n=4$, see profiles in the Fig.~\ref{fig:kick}(left) of the transition (a)$\mapsto$(b)). 
 On the other hand, irreversibility has a major role  as a global constraint on the perturbation space, by introducing a strong nonlinearity. For the current choice of parameters, this is evident in the fact that the computed evolution is qualitatively different from the unconstrained case. Despite allowing potential bifurcations, the system navigates a purely homogeneous branch, whose inf-eigenvalues that are positive indicating a sufficient condition for stability (hence observability) of the computed trajectory.
 
 \begin{figure}[htbp]
@@ -318,8 +318,9 @@ On the other hand, irreversibility has a major role  as a global constraint on t
 \begin{figure}[htbp]
     \centering
     \includegraphics*[width=.7\textwidth]{../images/irreversibility_inf_eig.png}
-    \caption{The right solver should'nt give you a crack. Lower bound of the Hessian spectra for the bifurcation problem  (orange line) and the stability problem (blue circles), along the homogeneous evolution. The bifurcation spectrum indicates  that the evolution path is unique until $\bar \epsilon_b$. Then, despite multiple solution exists, the homogeneous solution is stable. Notice that the observable $\lambda_t$ (inf-eig cone) for stability is \emph{discontinuous}.
-    % Stability of the homogeneous solution in the first model on (a) the linear space and (b) on convex cone $K^+_0$. When the irreversibility constraint is present, the homogeneous solution is stable for any value of the loading parameter $\bar\epsilon$.
+    \caption{Crack nucleation should not occcur in this scenario.
+    Lower bound of the Hessian spectra for the bifurcation problem  (orange line) and the stability problem (blue circles), along the homogeneous evolution. The bifurcation spectrum indicates  that the evolution path is unique until $\bar \epsilon_b$. Then, despite multiple solution exists, the homogeneous solution is stable. Notice that the observable $\lambda_t$ (inf-eig cone) for stability is \emph{discontinuous}.
+    % The right solver should'nt give you a crack.
     % (THE MARKET SHOUDN'T GIVE YOU A CRACK. THE MARKET DOESN'T GIVE A FUCK.) 
     }
     \label{fig:shouldnt}
